tests/tests/errors/2014-3.vb
'#compiler-options:/debug:xxx
'#compiler-message:Command line error BC2014 : the value 'xxx' is invalid for option 'debug'
'#exit-code:1